welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:14: error: too many arguments for method droite: ()Unit
droite(2)
      ^Source:16: error: too many arguments for method droite: ()Unit
droite(2)
      ^